feat: add frontend LLM provider selection and prepare for argument_composer generalization
- Frontend: Add LLM provider dropdown in Header (DeepSeek/OpenAI)
- Frontend: Add llmProvider state with localStorage persistence
- Backend: Add provider parameter to extraction and arguments APIs
- Backend: Update all LLM service calls to support provider selection
- Doc: Update development log with completed features and generalization plan

--- a/Doc/开发日志.md
+++ b/Doc/开发日志.md
@@ -235,4 +235,232 @@
 
 ---
 
+## 3. 多 LLM Provider 支持
+
+**日期**: 2026-02-17
+
+### 3.1 问题背景
+
+系统原有的 LLM 调用只支持 OpenAI API，存在以下问题：
+- GPT-4 成本较高
+- 缺乏灵活性，无法切换不同提供商
+
+### 3.2 设计方案
+
+#### 架构设计
+
+```
+┌────────────────────────────────────────────────────┐
+│                   Frontend                          │
+│  ┌──────────────────────────────────────────────┐  │
+│  │  Settings / Header                            │  │
+│  │  LLM Provider: [DeepSeek ▼] [OpenAI]         │  │
+│  └──────────────────────────────────────────────┘  │
+└────────────────────────────────────────────────────┘
+                         │
+                         ▼
+┌────────────────────────────────────────────────────┐
+│                   Backend                           │
+│  ┌──────────────────────────────────────────────┐  │
+│  │ llm_client.py                                 │  │
+│  │                                               │  │
+│  │  call_llm(prompt, provider="deepseek")       │  │
+│  │       │                                       │  │
+│  │       ├── provider="deepseek" → call_deepseek │  │
+│  │       └── provider="openai"   → call_openai   │  │
+│  └──────────────────────────────────────────────┘  │
+└────────────────────────────────────────────────────┘
+```
+
+#### Provider 对比
+
+| Provider | Model | 价格 | 特点 |
+|----------|-------|------|------|
+| **DeepSeek** | deepseek-chat | ¥1/百万token | 便宜，中文好 |
+| **OpenAI** | gpt-4o-mini | $0.15/百万token | 稳定，JSON schema |
+| **OpenAI** | gpt-4o | $5/百万token | 质量最高 |
+
+### 3.3 实现内容 (已完成)
+
+#### 后端修改
+
+**修改文件**: `services/llm_client.py`
+- 新增 `DEEPSEEK_CHAT_MODEL`, `DEEPSEEK_REASONER_MODEL` 常量
+- 新增 `call_deepseek()` 函数 - DeepSeek API 调用
+- 新增 `call_deepseek_text()` 函数 - DeepSeek 纯文本响应
+- 新增 `call_llm()` 统一接口 - 根据 provider 参数分发
+- 新增 `call_llm_text()` 统一文本接口
+- 修改 `analyze_with_schema()` 和 `generate_prose()` 使用统一接口
+
+**修改文件**: (所有使用 LLM 的服务)
+- `unified_extractor.py`: `call_openai` → `call_llm`
+- `argument_generator.py`: `call_openai` → `call_llm`
+- `entity_merger.py`: `call_openai` → `call_llm`
+- `snippet_extractor.py`: `call_openai` → `call_llm`
+- `petition_writer.py`: `call_openai_text` → `call_llm_text`
+- `relationship_analyzer.py`: `call_openai` → `call_llm`
+
+### 3.4 前端 Provider 选择 (已完成)
+
+#### 前端修改
+
+**修改文件**: `types/index.ts`
+- 新增 `LLMProvider` 类型
+- 新增 `LLMProviderInfo` 接口
+
+**修改文件**: `context/AppContext.tsx`
+- 新增 `llmProvider` 状态 (localStorage 持久化)
+- 新增 `setLlmProvider` 回调
+- API 调用传递 `provider` 参数
+
+**修改文件**: `components/Header.tsx`
+- 新增 LLM Provider 下拉选择器
+
+#### 后端修改 (支持 provider 参数)
+
+**修改文件**: `routers/extraction.py`
+- `ExtractionRequest` 添加 `provider` 字段
+
+**修改文件**: `routers/arguments.py`
+- `GenerateRequest` 添加 `provider` 字段
+
+**修改文件**: `services/unified_extractor.py`
+- `extract_exhibit_unified` 支持 `provider` 参数
+- `extract_all_unified` 支持 `provider` 参数
+
+**修改文件**: `services/entity_merger.py`
+- `suggest_entity_merges` 支持 `provider` 参数
+
+**修改文件**: `services/argument_generator.py`
+- `generate_arguments` 支持 `provider` 参数
+- `_smart_group_snippets` 支持 `provider` 参数
+
+### 3.5 配置说明
+
+在 `.env` 中配置 API Key：
+```env
+# DeepSeek (推荐，便宜)
+DEEPSEEK_API_KEY=sk-xxx
+DEEPSEEK_API_BASE=https://api.deepseek.com/v1
+
+# OpenAI (备选)
+OPENAI_API_KEY=sk-xxx
+OPENAI_API_BASE=https://api.openai.com/v1
+```
+
+---
+
+## 4. 连线聚焦互斥 Bug 修复
+
+**日期**: 2026-02-17
+
+### 4.1 问题
+
+点击不同的 Argument 卡片时，旧的连线不消失，和新的连线重叠。
+
+### 4.2 原因
+
+当 `focusState` 从 `{type:'argument', id:'A'}` 变成 `{type:'argument', id:'B'}` 时：
+- 条件 `focusState.type === 'argument'` 仍然为 TRUE
+- React 复用同一个组件实例
+- 没有 `key` 属性，React 无法识别需要重新创建
+
+### 4.3 修复
+
+**修改文件**: `components/ConnectionLines.tsx`
+
+```tsx
+// 添加 key 属性强制 React 重新创建组件
+{focusState.type === 'argument' && focusState.id ? (
+  <ArgumentConnectionLines key={focusState.id} argumentId={focusState.id} />
+) : focusState.type === 'standard' && focusState.id ? (
+  <StandardConnectionLines key={focusState.id} standardId={focusState.id} />
+) : selectedSnippetId ? (
+  <SnippetConnectionLines key={selectedSnippetId} snippetId={selectedSnippetId} />
+) : null}
+```
+
+---
+
+## 5. Argument Composer 泛化优化
+
+**日期**: 2026-02-17
+
+### 5.1 问题背景
+
+`argument_composer.py` 中存在严重的过拟合问题，硬编码了特定案例 (yaruo_qu) 的数据：
+
+| 位置 | 变量 | 问题 |
+|------|------|------|
+| 43-60 | `EXHIBIT_TO_MEDIA` | D1-D13 → 具体媒体名，仅适用于 yaruo_qu |
+| 66-74 | `EXHIBIT_TO_ASSOCIATION` | C1-C7 → SFBA，仅适用于 yaruo_qu |
+| 93-95 | `APPLICANT_NAME_VARIANTS` | yaruo qu, gaby 等，仅适用于 yaruo_qu |
+| 98-101 | `ORGANIZATION_MERGE` | venus → yiqing，仅适用于 yaruo_qu |
+| 189 | 代码 | "BAT Training System" 硬编码 |
+| 192 | 代码 | "China Fitness Industry Achievement Award" 硬编码 |
+
+### 5.2 泛化方案
+
+将硬编码映射替换为 **LLM 动态分析层**：
+
+```
+┌─────────────────────────────────────────────────────────────┐
+│                    泛化后架构                                 │
+├─────────────────────────────────────────────────────────────┤
+│                                                              │
+│  unified_extractor → snippets + entities                    │
+│       │                                                      │
+│       ▼                                                      │
+│  ┌─────────────────────┐     ┌─────────────────────┐        │
+│  │ entity_analyzer     │ ──► │ project_metadata    │ [新增] │
+│  │ (LLM 动态分析)       │     │ (JSON 配置)         │        │
+│  └─────────────────────┘     └──────────┬──────────┘        │
+│                                         │                    │
+│             ┌───────────────────────────┘                    │
+│             ▼                                                │
+│  ┌─────────────────────┐                                     │
+│  │ argument_composer   │  使用动态配置替代硬编码              │
+│  │ (泛化版)            │                                     │
+│  └─────────────────────┘                                     │
+│                                                              │
+└─────────────────────────────────────────────────────────────┘
+```
+
+### 5.3 实现计划
+
+| 文件 | 操作 | 说明 |
+|------|------|------|
+| `services/entity_analyzer.py` | 新增 | LLM 分析实体，生成配置 |
+| `services/argument_composer.py` | 重构 | 移除硬编码，使用配置 |
+| `routers/arguments.py` | 修改 | 调用分析后再组合 |
+
+### 5.4 project_metadata.json 结构
+
+```json
+{
+  "applicant": {
+    "formal_name": "Ms. Yaruo Qu",
+    "name_variants": ["yaruo qu", "gaby", "ms. qu"]
+  },
+  "exhibit_mappings": {
+    "media": {"D1": "The Jakarta Post", "D5": "China Sports Daily"},
+    "associations": {"C1": "Shanghai Fitness Bodybuilding Association"},
+    "organizations": {"F1": "Shanghai Yiqing Fitness Management Co., Ltd."}
+  },
+  "entity_merges": [
+    {"canonical": "Shanghai Yiqing", "variants": ["venus weightlifting"]}
+  ],
+  "key_achievements": {
+    "original_contribution": "BAT Training System",
+    "awards": ["China Fitness Industry Achievement Award"]
+  }
+}
+```
+
+### 5.5 状态
+
+进行中
+
+---
+
 *日志由开发团队维护*
